# atrament

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/atrament/: ai.py  const.py  main.py  page_ref.py  run.py
src/atrament/components/: previouse_projects_list.py  starter_page.py
src/atrament/sections/: create_project.py  home.py  project.py  section.py  settings.py
