[project]
name = "atrament"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.20.1",
    "flet[all]>=0.80.0",
    "openai>=2.14.0",
    "platformdirs>=4.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "flet[all]>=0.80.0",
]

[project.scripts]
atrament = "atrament.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.mypy]
strict = true

[tool.flet]
org = "com.mycompany"
product = "atrament"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src/atrament"
